Update backend configuration and controllers